color rework, new animations, fixed too big css file

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 :root{
-    --a1: #a8c7fa;
-    --a3: #004a77;
+    --a1: #ffb3b3;
+    --a3: #5f131b;
+    --b1: #e3e3e3;
 }
 
 body{
@@ -34,18 +35,51 @@ svg {
         stroke-linecap: round;
         //animation: dash 2s forwards infinite;
     }
-    @for $i from 1 through 1000 {
+    @for $i from 1 through 100 {
         & #input-hidden-weights-animated > path:nth-child(#{$i}) {
             animation: dash calc( random(20) / 10 + 4 ) + s forwards calc( random(50) / 10 ) + s infinite;
         }
     }
-    @for $i from 1 through 1000 {
+    @for $i from 1 through 100 {
         & #hidden-output-weights-animated > path:nth-child(#{$i}) {
             animation: dash calc( random(20) / 10 + 4 ) + s forwards calc( random(50) / 10 ) + s infinite;
         }
     }
+    @for $i from 1 through 10 {
+        & #input-layer circle:nth-child(#{$i}) {
+            animation: flash calc( random(40) / 10 + 4 ) + s forwards calc( random(80) / 10 ) + s infinite;
+        }
+    }
+    @for $i from 1 through 10 {
+        & #hidden-layer circle:nth-child(#{$i}) {
+            animation: flash calc( random(40) / 10 + 4 ) + s forwards calc( random(80) / 10 ) + s infinite;
+        }
+    }
+    @for $i from 1 through 10 {
+        & #output-layer circle:nth-child(#{$i}) {
+            animation: flash calc( random(40) / 10 + 4 ) + s forwards calc( random(80) / 10 ) + s infinite;
+        }
+    }
 }
 
+@keyframes flash {
+    0%{
+        stroke: var(--a3);
+        fill: var(--a1);
+    }
+    10%{
+        stroke: var(--b1);
+        fill: var(--b1);
+    }
+    20%{
+        stroke: var(--a3);
+        fill: var(--a1);
+    }
+    100%{
+        stroke: var(--a3);
+        fill: var(--a1);
+    }
+}
 
 @keyframes dash {
     0% {
@@ -127,7 +161,7 @@ input[type=number]{
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    color: #000;
+    color: var(--a3);
     &:focus {
         outline: none;
     }
